hooked up plant api for frontend

--- a/src/backend/.env
+++ b/src/backend/.env
@@ -1,2 +1,5 @@
-API_KEY
+API_KEY=3UnsUKWqnqJ0
+API_SECRET=2c35e46b-0e77-43f9-b82d-435a0481379c
 PORT=3000
+DATABASE_URL=database-1.cox28iswmjn8.us-east-1.rds.amazonaws.com
+DATABASE_PASSWORD=November21st?
