--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "cy:run": "cypress run"
   },
   "dependencies": {
+    "axios": "^1.8.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "mysql2": "^3.13.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.2.0"
